--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,16 @@
 .num_animation .auto-type{
   color: #dc8e00;
 }
+
+.dropdown:hover .dropdown-menu{
+  display: block;
+}
+
+.dropdown .dropdown-menu{
+  display: none;
+  background: none;
+}
+
+.dropdown-item{
+  color: #ccc;
+}
