--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,8 @@
   height:0;
 }
 .map-container iframe{
-  left:0;
-  top:0;
+  /*left:0;*/
+  /*top:0;*/
   height:100%;
   width:100%;
   position:absolute;
