--- a/css/style.css
+++ b/css/style.css
@@ -102,16 +102,16 @@
 }
 
 .service{
-  /*position: relative;*/
-  /*min-height: 100vh;*/
-  /*background-size: cover;*/
-  background: #ccc;
+  position: relative;
+  min-height: 100vh;
+  background-size: cover;
+  /*background: #ccc;*/
 }
 
 .service h4{
   font-size: 2.0em;
   color: #262626;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   font-weight: bold;
   padding-top: 50px;
 }
@@ -119,9 +119,13 @@
 .service h5{
   font-size: 1.5em;
   color: #262626;
-  text-transform: uppercase;
-  font-weight: bold;
+  /*text-transform: uppercase;*/
+  /*font-weight: bold;*/
   padding-top: 50px;
+}
+
+#service_col_2{
+  padding: 50px;
 }
 
 .map-container{
@@ -136,4 +140,10 @@
   height:100%;
   width:100%;
   position:absolute;
+}
+
+.service ul{
+  font-size: 24px;
+  padding-top: 25px;
+  color: #ccc;
 }
